# dvm-dos-tem

./: .cproject  .dockerignore  .env  .gitattributes  .gitignore  .project  AC3-STEP1-MD1.jl  CITATION.cff  CONTRIBUTORS  Dockerfile  Dockerfile-build  Dockerfile-mapping-support  Dockerfile-support  Doxyfile  HOWTO_RELEASE.md  LICENSE  Makefile  README.md  SConstruct  Vagrantfile  bootstrap-sel-custom.sh  bootstrap-system.sh  bootstrap.sh  bootstrap_install.sh  cmt_calparbgc_backup2025_0930.txt  comparison_plotting.ipynb  compile_in_debug.sh  dev-container.json  docker-build-wrapper.sh  docker-compose.yml  docker-install.sh  dvmdostem_1p_1n_2017-05-23_17-16.map  dvmdostem_1p_1n_2017-05-23_17-57.map  dvmdostem_1p_1n_2017-05-24_05-24.map  dvmdostem_1p_1n_2017-05-28_18-53.map  master_PR_compare_driver.sh  master_PR_compare_plotter.py  model.pro  notes.txt  p-dvm-dos-tem.sh  (+6 more)
pyddt/: README.md  TEMPORARY_notes.yaml  pyproject.toml
pyddt/docs/: SALVAGE_AND_MERGE.md
pyddt/pyddt/drivers/: madstem.py  sensitivity.py
pyddt/pyddt/util/: outspec.py  runmask.py
pyddt/tests/: m2y_analysis_hg.py  presim_summary.py  pullrequest_test.py  run_tests.py  test_integration_salvage_merge.py  test_restart_run_mechanics.py  test_salvage_merge.py  test_util.py
pyddt/tests/doctests/: WIP_doctests_drivers_seed_path.md  doctests_MadsTEMDriver.rst  doctests_MadsTEMDriver_alltypestargets.rst  doctests_MadsTEMDriver_onlysoiltarget.rst  doctests_Sensitivity.md  doctests_Sensitivity_PFT_compartment_params.md  doctests_Sensitivity_PFT_params.md  doctests_Sensitivity_bounds.md  doctests_qcal.md  (+6 more)
(+1525 files in other folders)
