#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyddt"
version = "0.0.1"
authors = [
  {name="Tobey Carman", email="tcarman2@alaska.edu"},
  {name="Ruth Rutter", email="rarutter@alaska.edu"}
  ]
description = "All the dvmdostem tools."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/uaf-arctic-eco-modeling/dvm-dos-tem"
Issues = "https://github.com/uaf-arctic-eco-modeling/dvm-dos-tem/issues"

[project.scripts]
pyddt-runmask = "pyddt.util.runmask:main"
pyddt-input = "pyddt.util.input:main"
pyddt-param = "pyddt.util.param:main"
pyddt-swd = "pyddt.util.setup_working_directory:main"
pyddt-outspec = "pyddt.util.outspec:main"
pyddt-qcal = "pyddt.util.qcal:main"

